--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark primary-color">
-  <a class="navbar-brand" href="#">MyTask</a>
+  <a class="navbar-brand" href="{%if user.username %} {%url 'Todo:todaytask'%} {%else%} {%url 'user:login'%} {%endif%}">MyTask</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -51,9 +51,8 @@
           <i class="fas fa-user"></i>
         </a>
         
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="{%url 'user:logout' %}">Sign Out</a>
+        <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+          <a class="dropdown-item " href="{%url 'user:logout' %}"><center>Sign Out</center></a>
         </div>
         {%endif%}
       </li>
