--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
 	<title>{%block title%}MyTask{% endblock %}</title>
 
 	<!-- Font Awesome -->
@@ -26,11 +28,12 @@
         <a class="nav-link" href="#arch">Archive</a>
       
       </li>
-      <li class="nav-item ">
+     <!-- <li class="nav-item ">
           <a class="nav-link" href="#uchck">Recent
             
           </a>
         </li>
+      -->
 {%endif%}
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -76,7 +79,7 @@
 <footer class="page-footer font-small blue fixed-bottom">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2019 Copyright: Mytask.com Pholatech
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: TodoManager | Pholatech
     
   </div>
   <!-- Copyright -->
