update register.html and forms.pr

--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -4,7 +4,8 @@
 Register-Mytask
 {%endblock%}
 {%block main%}
-<div style="padding: 10px 50px 70px; width: 500px; margin: auto;">
+<center>
+<div style=" width: 500px;">
 <h1><center>Registeration Page</center></h1>
 
 <form method="post" action="{%url 'user:register'%}">
@@ -13,5 +14,5 @@ Register-Mytask
     {%csrf_token%}
     <center><button type="submit" class="btn btn-success">Register</button></center>
 </form>
-</div>
+</div></center>
 {%endblock%}
